--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.3.1",
+    "firebase-admin": "^13.1.0",
     "framer-motion": "^12.4.2",
     "postcss": "^8.5.2",
     "react": "^19.0.0",
@@ -45,5 +49,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "firebaseConfig.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fx-coded/traderstream.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/fx-coded/traderstream/issues"
+  },
+  "homepage": "./"
 }
