--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-tabs": "^1.1.3",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
