--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "backend",
+  "name": "trader-stream-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "Backend for Trader Stream Live Streaming Platform",
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0"
   },
-  "keywords": [],
-  "author": "",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest --detectOpenHandles",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky install"
+  },
+  "keywords": [
+    "streaming",
+    "trading",
+    "websockets",
+    "realtime"
+  ],
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.8.1",
     "compression": "^1.8.0",
@@ -19,11 +32,62 @@
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.1.0",
     "helmet": "^8.0.0",
+    "http": "^0.0.1-security",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "uuid": "^11.1.0",
-    "ws": "^8.18.0"
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "server.js",
+      "config/",
+      "routes/",
+      "middleware/"
+    ],
+    "ext": "js,json",
+    "ignore": [
+      "tests/",
+      "docs/"
+    ],
+    "verbose": true
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/tests/"
+    ],
+    "setupFiles": [
+      "dotenv/config"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "rules": {
+      "no-console": "off",
+      "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+    },
+    "env": {
+      "node": true,
+      "jest": true
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm test"
+    }
   }
 }
